--- a/404.md
+++ b/404.md
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: "404: Page not found"
+title: "404: Pagina non trovata."
 permalink: 404.html
 ---
 
-# 404: Page not found
-Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. [Head back home]({{ site.url }}) to try finding it again.
+# 404: Pagina non trovata
+Errore, la pagina non e' stata trovata. [Torna nell'homepage]({{ site.url }})
